--- a/1_HTML/실습문제1.html
+++ b/1_HTML/실습문제1.html
@@ -8,21 +8,21 @@
   <body>
     <img src="../resources/pubao.jpg" alt="" width="350" height="250" />
     <h1>푸바오</h1>
-    <pre>
-할부지 껌딱지
 
-사는 곳, 용인
-    </pre>
+    &nbsp;&nbsp;&nbsp;할부지 껌딱지<br /><br />
+
+    &nbsp;&nbsp;&nbsp;사는 곳, 용인<br /><br />
+
     <!--여기에 링크 추가하기-->
     <a href="https://github.com/" target="_blank">Github</a> &nbsp;&nbsp;
     <a href="https://www.instagram.com/fubaoooong/">instagram</a>
 
-    <h2><strong>Who am I</strong></h2>
+    <h2>Who am I</h2>
     개발에 관심이 많아 개발자가 되기 위해 할부지 몰래 코딩 중입니다.
-    <h2><strong>Experience</strong></h2>
+    <h2>Experience</h2>
     여동생들인 루이바로와 후이바오에게 코딩을 연마할 수 있도록 도와주기 위해 1년
     동안 수행중..!
-    <h2><strong>Skills</strong></h2>
+    <h2>Skills</h2>
 
     <ul>
       <li>
