--- a/1_HTML/실습문제1.html
+++ b/1_HTML/실습문제1.html
@@ -8,10 +8,15 @@
   <body>
     <img src="../resources/pubao.jpg" alt="" width="350" height="250" />
     <h1>푸바오</h1>
+    <!-- 텍스트애대한 접근을 추가로 삽입! <p></p>혹은. 걍 왠만하면 각 문단마다 p태그로 진행. -->
 
     &nbsp;&nbsp;&nbsp;할부지 껌딱지<br /><br />
 
     &nbsp;&nbsp;&nbsp;사는 곳, 용인<br /><br />
+
+    <p>&nbsp;&nbsp;&nbsp;할부지 껌딱지<br /><br /></p>
+
+    <p>&nbsp;&nbsp;&nbsp;사는 곳, 용인<br /><br /></p>
 
     <!--여기에 링크 추가하기-->
     <a href="https://github.com/" target="_blank">Github</a> &nbsp;&nbsp;
@@ -48,6 +53,20 @@
         </ul>
       </li>
     </ul>
+
+    <!-- 해설지 ul>li, ul>li 형태로.
+    <ul>
+      <li>Back_End</li>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <li>Front_end</li>
+    </ul>
+
+     -->
 
     <h2>Education</h2>
     <ul>
