02_CSS(배경,레이아웃)_2023/12/05_EndOfClass
2023/12/05 5:33pm

--- a/2_CSS/04_텍스트스타일.html
+++ b/2_CSS/04_텍스트스타일.html
@@ -87,5 +87,78 @@
 
     <h2>white-space</h2>
     <p id="whs">여러 개의 공백을 처리하는 방법을 지정하는 속성.</p>
+
+    <h2>letter-spacing</h2>
+    <p id="ls">낱개 글자의간격을 조정하고 싶을때 사용</p>
+
+    <h2>word-spacing</h2>
+    <p id="ws">단어와 단어 사이의 간격을 조정하고 싶을 때 사용</p>
+
+    <h2>text-align</h2>
+    <p>문장을 정렬하는 속성</p>
+
+    <h3>왼쪽정렬이 기본값</h3>
+    <p id="ta1">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro eligendi
+      minus reiciendis maxime, nam autem, qui earum nemo perferendis cupiditate
+      ex consectetur tenetur ipsa! Voluptates dolore libero porro atque a.
+    </p>
+    <h3>오른쪽 정렬</h3>
+    <p id="ta2">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab sunt porro,
+      labore atque vitae assumenda at? Aut veniam, ab quod laborum distinctio
+      aperiam ullam illo ad cum, saepe magni ipsum.
+    </p>
+    <h3>가운데 정렬</h3>
+    <!-- p#ta3>lorem -->
+    <p id="ta3">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim vitae ipsa
+      est impedit praesentium velit quisquam! Placeat, provident nisi fuga esse
+      nihil doloribus tenetur hic illo quidem, quia, corporis dolor.
+    </p>
+    <h3>양쪽 정렬</h3>
+    <p id="ta4">
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi ex minus
+      itaque quis nulla accusantium a nobis doloribus vitae cupiditate culpa
+      sunt distinctio, officia laborum temporibus ratione officiis ipsum hic!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nemo
+      quod libero pariatur omnis ut, velit sed deleniti, totam distinctio fuga
+      minima consequuntur reiciendis ratione magni rerum nisi aut neque.
+    </p>
+    <h2>text-indent</h2>
+    <p>문장을 들여쓰기 하는 속성</p>
+    <p id="ti">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. At doloribus
+      voluptatum rem rerum incidunt esse doloremque, tempora dolorum alias
+      voluptas nihil officia quae eligendi iure quia? Repudiandae commodi
+      perspiciatis esse.
+    </p>
+
+    <h2>line-height</h2>
+    <p>문장의 줄 간격을 조정하는 소성</p>
+    <p id="lh">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio iusto
+      possimus quod in cum non repellendus voluptatum reiciendis? Expedita ullam
+      dolorem accusantium voluptas sapiente non sint deleniti placeat sunt
+      facilis.
+    </p>
+
+    <h2>text-overflow</h2>
+    <p>영역을 벗어나는 텍스트에 대한 상태를 지정하는 속성</p>
+    <p id="to">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat, unde
+      sapiente libero ea odit, quia nihil cupiditate temporibus perspiciatis rem
+      neque harum dolores est? Veniam perferendis sapiente pariatur assumenda
+      sunt?
+    </p>
+
+    <h2>list-style</h2>
+    <h3>순서 없는 목록 스타일</h3>
+    <ul id="list1">
+      <li>list 1</li>
+      <li>list 2</li>
+      <li>list 3</li>
+      <li>list 4</li>
+    </ul>
   </body>
 </html>
