02_CSS(mediaquery,flexbox)_2023/12/06_EndOfClass
2023/12/06 5:20pm

--- a/2_CSS/06_레이아웃스타일.html
+++ b/2_CSS/06_레이아웃스타일.html
@@ -30,7 +30,7 @@
     <h4>인라일 레벨 요소를 블록 레벨 요소로 변경</h4>
     <!-- span.display.display-block*5{$ 번째 영역}*5 -->
     <span class="display display-block">1 번째 영역</span>
-    <pan class="display display-block">2 번째 영역</pan>
+    <span class="display display-block">2 번째 영역</span>
     <span class="display display-block">3 번째 영역</span>
     <span class="display display-block">4 번째 영역</span>
     <span class="display display-block">5 번째 영역</span>
@@ -80,5 +80,18 @@
     </div>
 
     <div id="fixed"></div>
+
+    <h3>visibility</h3>
+    <p>요소를 화면에 보이거나 보이지 않게 하는 속성</p>
+    <div class="visibility" id="vis1"></div>
+    <div class="visibility" id="vis2"></div>
+
+    <h3>z-index</h3>
+    <p>요소위에 요소를 쌓을 때 쌓는 순서를 짖어한느 속성</p>
+    <div id="z-outer">
+      <div class="z-index" id="z-index1"></div>
+      <div class="z-index" id="z-index2"></div>
+      <div class="z-index" id="z-index3"></div>
+    </div>
   </body>
 </html>
