02_CSS(Grid)_2023/12/06_EndOfClass
2023/12/07 5:35pm

--- a/2_CSS/실습문제2-1.html
+++ b/2_CSS/실습문제2-1.html
@@ -4,28 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/실습문제2-1.css" />
   </head>
   <body>
-    <div class="profile-card">
-      <img
-        src="../resources/pubao.jpg"
-        class="list"
-        id="pubao_round"
-        alt=""
-        width="300"
-      />
+    <div class="profil-card">
+      <img src="../resources/pubao.jpg" alt="" />
       <h1>@푸바오</h1>
-      <a href="https://github.com" class="list" id="github" target="_blank"
-        >Github</a
-      >
-      <a
-        href="https://instagram.com"
-        class="list"
-        id="instagram"
-        target="_blank"
-        >Instagram</a
-      >
+      <a href="https://github.com/">Github</a>
+      <a href="https://www.instagram.com/">Instagram</a>
     </div>
   </body>
 </html>
