--- a/3_JavaScript/basic/실습문제3-1.html
+++ b/3_JavaScript/basic/실습문제3-1.html
@@ -103,9 +103,8 @@
       let answer7_1 = "원";
       console.log(
         answe7 +
-          (pricelamb * numberlamb + pricedrink * parseInt(numberlamb / 10)) +
-          answer7_1
-      );
+          (pricelamb * numberlamb + pricedrink *(6 - parseInt(numberlamb / 10))) +
+          answer7_1);
     </script>
   </body>
 </html>
