--- a/Pratice/The-K한국교직원공제회.html
+++ b/Pratice/The-K한국교직원공제회.html
@@ -1,42 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout_Pratice</title>
-    <link rel="stylesheet" href="../Pratice/CSS_pratice/reset.css">
-    <link rel="stylesheet" href="../Pratice/CSS_pratice/The-K한국교직원공제회.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../Pratice/CSS_pratice/reset.css" />
+    <link
+      rel="stylesheet"
+      href="../Pratice/CSS_pratice/The-K한국교직원공제회.css"
+    />
+  </head>
+  <body>
     <header>
-        <h1>The-K한국교직원공제회</h1>
-        <nav>
-            <div class="content-list">
-            <a href="">공제회 개요</a>
-            <a href="">홍보마당</a>
-            <a href="">지속가능경영</a>
-            <a href="">경영공시</a>
-            <a href="">공고</a>
-            </div>
-            <div class="content-signin">
-            <a href="">개인</a>
-            <a href="">법인</a>
-        </nav>
+      <h1>The-K한국교직원공제회</h1>
+      <nav>
+        <div class="content-list">
+          <a href="">공제회 개요</a>
+          <a href="">홍보마당</a>
+          <a href="">지속가능경영</a>
+          <a href="">경영공시</a>
+          <a href="">공고</a>
+        </div>
+        <div class="content-signin">
+          <a href="">개인</a>
+          <a href="">법인</a>
+        </div>
+      </nav>
     </header>
     <main>
-        <h5>The-K가족으로 새롭게 도약합니다.</h5>
-        <h2>더 바르고 더 정직하며 더 큰 믿음을 드리겠습니다</h2>
-        <h6>화면을 스크롤 해보세요</h6>
+      <h5>The-K가족으로 새롭게 도약합니다.</h5>
+      <h2>더 바르고 더 정직하며 더 큰 믿음을 드리겠습니다</h2>
+      <h6>화면을 스크롤 해보세요</h6>
     </main>
     <section id="section1">
-        <h5>더 큰 만족과 감동을 드리겠습니다.</h5>
-        <h4>한국교직원공제회<br>인터넷 홈페이지를 찾아주셔서<br>대단히 감사합니다.</h4>
-        <a href="">인사말 바로가기</a>
-        <div class="hyperlink-circle">circle</div>
+      <h5>더 큰 만족과 감동을 드리겠습니다.</h5>
+      <h4>
+        한국교직원공제회<br />인터넷 홈페이지를 찾아주셔서<br />대단히
+        감사합니다.
+      </h4>
+      <a href="">인사말 바로가기</a>
+      <div class="hyperlink-circle">circle</div>
     </section>
-    <section id="section2">
-
-    </section>
-    
-</body>
+    <section id="section2"></section>
+  </body>
 </html>
