--- a/3_JavaScript/basic/실습문제3-2.html
+++ b/3_JavaScript/basic/실습문제3-2.html
@@ -13,7 +13,7 @@
      -->
     <script>
       const id = prompt("id를 입력하세요.");
-      if (id == "admin") {
+      if (id === "admin") {
         console.log("관리자입니다");
       } else {
         console.log("관리자가 아닙니다.");
@@ -29,8 +29,10 @@
       const string2_1 = prompt("실기시험성적");
       if (string2 >= 80 && string2_1 >= 80) {
         console.log("합격입니다!");
-      } else {
+      } else if (string2 < 80 || string2_1 < 80) {
         console.log("불합격입니다!");
+      } else {
+        console.log("잘못 입력하셨습니다.");
       }
     </script>
 
@@ -39,7 +41,7 @@
      -->
     <script>
       const string3 = prompt("숫자를 입력하세요");
-      if (string3 >= 10 && string3 <= 20) {
+      if (string3 > 10 && string3 < 20) {
         console.log("10과 20의 사이에 있습니다");
       } else {
         console.log("10과 20의사이에 있지 않습니다.");
@@ -65,17 +67,67 @@
      -->
     <script>
       const month = prompt("현재 몇월달인지 입력해주세요.");
-      if (month == 12 || month <3) {
+      // const month = "";
+      if (month == 12 || month < 3) {
         console.log(month + "월은 겨울입니다");
-      } else if (month >=3 && month <6){
+      } else if (month >= 3 && month < 6) {
         console.log(month + "월은 봄입니다.");
-      } else if (month >=6 && month <9){
+      } else if (month >= 6 && month < 9) {
         console.log(month + "월은 여름입니다.");
-      } else if (month >=9 && month <12){
+      } else if (month >= 9 && month < 12) {
         console.log(month + "월은 가을입니다.");
       } else {
-        console.log("잘못 입력하셨습니다.")
+        console.log("잘못 입력하셨습니다.");
       }
+
+      //   if -> 중첩가능 but 가급적 쓰지 않는것 추천
+      // const month : prompt("월 입력");
+      // let season : "";
+      //
+      // if (1 <= month && month <= 12) {
+      //   if (month >= 3 && month <= 5) {
+      //     season = "봄";
+      //   } else if (6 <= mont && month <= 8) {
+      //     season = "여름";
+      //   } else if (9 <= month && month <= 11) {
+      //     season = "가을";
+      //   } else {
+      //     season = "겨울";
+      //   }
+      // console.log("${month}월은 ${season}입니다");
+      // }
+
+      // switch
+      // const month2 : Number(prompt("월 입력"));
+      // console.log(typeof month) -> 기존 month는 string 타입임
+      // let season : "";
+      //  switch (Number(month2)) {
+      //   case 3:
+      //   case 4:
+      //   case 5:
+      //     season = "봄";
+      //     break;
+      //   case 6:
+      //   case 7:
+      //   case 8:
+      //     season = "여름";
+      //     break;
+      //   case 9:
+      //   case 10:
+      //   case 11:
+      //     seaon = "가을";
+      //     break;
+      //   case 12:
+      //   case 1:
+      //   case 2:
+      //     season ="겨울";
+      //     break;
+      //     default:
+      //       console.log("월을 잘못 입력하셨습니다.")
+      //  }
+      // if (season !== ""){
+      //  console.log("${month2}월은 ${season}입니다");
+      // }
     </script>
   </body>
 </html>
