--- a/3_JavaScript/basic/실습문제3-4.html
+++ b/3_JavaScript/basic/실습문제3-4.html
@@ -18,61 +18,138 @@
 
     <!-- Q2. 1 ~ 1000 정수 중 3의 배수의 합계를 출력하세요 -->
     <script>
+      console.log("Q2 ------------------------------");
       let sum = 0;
       for (let i = 1; i <= 1000; i += 1) {
-        if (i % 3 == 0) {
+        if (i % 3 === 0) {
           sum += i;
         }
-
-        console.log(sum);
       }
+      console.log("3의 배수의 총합은? : " + sum);
     </script>
 
     <!-- Q3. 문자열의 문자들을 하나씩 출력하세요 -->
     <script>
-      const str = "안녕하세요. 반갑습니다!".split("");
-      console.log(str);
+      console.log("Q3 ------------------------------");
+      const str = "안녕하세요. 반갑습니다!";
+      for (let i = 0; i < str.length; i++) {
+        console.log(str[i]);
+      }
+      for (const i in str) {
+        console.log(str[i]);
+      }
+      for (const i of str) {
+        console.log(i);
+      }
+      let a = 0;
+      while (a < str.length) {
+        console.log(str[a]);
+        a++;
+      }
     </script>
 
     <!-- Q4. 배열 값 중 최대값을 출력하세요 -->
     <script>
+      console.log("Q4 ------------------------------");
       const nums = [3, 7, 12, 5, 3];
-      nums.splice(0, 2);
-      nums.splice(1, 2);
-      console.log(nums);
+      nums.sort((a, b) => a - b);
+      console.log("최대값: " + nums[nums.length - 1]);
+
+      // for (let num of nums) {
+      //   let max = num[0];
+      //   if (max < num) {
+      //     max = num;
+      //   }
+
+      //   //max:3. num:3
+      //   // max:3 num :7 -> max < num  -> ,max :7
+      //   // max :7, num : 12 -> max:12
+      // }
+      // console.log(num);
     </script>
 
-    <!-- Q5. 1 ~ 100 정수 중 소수를 출력하세요 -->
+    <!-- Q5. 1 ~ 100 정수 중 소수를 출력하세요 
+    2,3,5,7
+    -->
+
     <script>
-      //5번은 아예 모르겠습니다.
+      console.log("Q5 ------------------------------");
+      for (let i = 2; i <= 100; i++) {
+        for (let j = 2; j <= i; j++) {
+          if (i % j === 0 && i !== j) {
+            //중첩으로 각각의 if 아래에 놓을수 있음
+            break;
+          } else if (i % j === 0 && i === j) {
+            console.log(i);
+          }
+        }
+      }
     </script>
 
     <!-- Q6. 배열 안의 데이터를 모두 2배로 만들어서 출력하세요 -->
     <script>
+      console.log("Q6 ------------------------------");
+
       const nums2 = [1, 3, 5];
       for (i = 0; i <= 2; i++) {
         console.log(nums2[i] * 2);
       }
+
+      nums2.forEach((num) => {
+        console.log(num * 2);
+      });
+
+      const nums4 = nums2.map((num) => {
+        return num * 2;
+      });
+      // const nums4 = nums2.map((num)=>num*2);
+      console.log(nums4);
     </script>
 
     <!-- Q7. 배열에 있는 데이터들로 합계와 평균을 출력하세요 -->
     <script>
+      console.log("Q7 ------------------------------");
+
       let sum2 = 0;
       const nums3 = [90, 85, 70, 86, 97];
       for (i = 0; i <= 4; i++) {
         sum2 += nums3[i];
       }
-      console.log("평균: " + sum2 / 5);
+      console.log("평균: " + sum2 / 5 + "점");
+
+      let sum22 = 0;
+      for (index in nums3) {
+        console.log(nums3[index]);
+        sum22 += nums3[index];
+      }
+      console.log(`합계:  ${sum22}, 평균: ${sum22 / nums3.length}`);
+
+      const sum3 = nums3.reduce((ac, num) => ac + num);
+      console.log(`합계 : ${sum3}`);
     </script>
 
     <!-- Q8. 두 배열의 각 데이터의 곱셈을 한 데이터들로 이루어진 새로운 배열을 생성하여 출력하세요 -->
     <script>
+      console.log("Q8 ------------------------------");
+
       let muti = 0;
       const a1 = [12, 0, 2, 5, 4];
       const b1 = [5, 15, 6, 7, 8];
+      const c1 = [];
       for (i = 0; i <= 4; i++) {
         console.log([a1[i] * b1[i]]);
       }
+
+      for (i in a1) {
+        c1.push(a1[i] * b1[i]);
+      }
+      console.log(c1);
+
+      c1 = [];
+      a1.forEach((value, index) => {
+        c1.push(value * b1[index]);
+      });
+      console.log(c1);
     </script>
 
     <!-- Q9. 두 배열의 데이터 값이 서로 같은 데이터들만 이루어진 새로운 배열을 생성하여 출력하세요
@@ -81,8 +158,15 @@
     <script>
       const a2 = [12, 0, 2, 5, 4];
       const b2 = [0, 2, 3, 12, 8];
-      //이것도 잘 모르겠습니다.
-    </script> 
+      const c2 = [];
+      a2.forEach((value) => {
+        //console.log(value, b2.includes(value));
+        if (b2.includes(value)) {
+          c2.push(value);
+        }
+      });
+      console.log(c2);
+    </script>
 
     <!-- Q10. 2차원 배열에는 3명의 학생의 4과목 성적이 들어 있습니다. 각 학생들의 합계와 평균을 출력하세요 -->
     <script>
@@ -92,14 +176,13 @@
         [98, 90, 77, 97],
       ];
 
-      for (let i =0;i<scores.length;i++){
-        let sum =0;
-        for (let j=0;j<scores.length;j++){
-          sum +=score[i][j];
+      for (let i = 0; i < scores.length; i++) {
+        let sum = 0;
+        for (let j = 0; j < scores.length; j++) {
+          sum += score[i][j];
         }
-        console.log((i+1)+"번,  총점: "+ sum +"평균: "+ sum / 4);
+        console.log(i + 1 + "번,  총점: " + sum + "평균: " + sum / 4);
       }
-      
     </script>
   </body>
 </html>
