--- a/3_JavaScript/basic/실습문제3-6.html
+++ b/3_JavaScript/basic/실습문제3-6.html
@@ -14,6 +14,14 @@
              price / 11340
     -->
     <script>
+      // const book = {
+      //   title: "하는일마다 잘되리라",
+      //   author: "전승환",
+      //   publisher: "북로망스",
+      //   price : 11340,
+      // };
+
+      //생성자 함수
       function Book(title, author, publisher, price) {
         this.title = title;
         this.author = author;
@@ -26,7 +34,23 @@
         "북로망스",
         "11340"
       );
+      //클래스
+      class Book2 {
+        constructor(title, author, publisher, price) {
+          this.title = title;
+          this.author = author;
+          this.publisher = publisher;
+          this.price = price;
+        }
+      }
+      const book2 = new Book2(
+        "하는 일마다 잘되리라",
+        "전승환",
+        "북로망스",
+        "11340"
+      );
       console.log(book);
+      console.log(book2);
     </script>
 
     <!-- Q2. 책 제목(title)과 저자(author)를 출력하세요. -->
@@ -40,6 +64,14 @@
     -->
     <script>
       console.log("Q3-------------------------");
+      // 가급적으로 함수 내에서 직접 출력 금지!
+      //console.log 테스트 용도로만
+      book.showPrice = function () {
+        return `${book.title}의 가격은 ${book.price}원 입니다.`;
+      };
+      console.log(book.showPrice());
+      document.write(book.showPrice());
+
       function Book(title, author, publisher, price) {
         this.title = title;
         this.author = author;
@@ -61,17 +93,28 @@
     -->
     <script>
       console.log("Q4-------------------------");
-
-      function Music(title1, author1) {
-        this.title1 = title1;
-        this.author1 = author1;
-
-        this.desc = function () {
-          return `${author1}의 곡 ${title1} 발표!`;
-        };
+      class Music {
+        constructor(title, singer) {
+          this.title = title;
+          this.singer = singer;
+        }
+        desc() {
+          return `${this.singer}의 곡 '${this.title}' 발표!`;
+        }
       }
       const music = new Music("Perfect Night", "르세라핌");
-      console.log(music.desc()); // 르세라핌의 곡 'Perfect Night' 발표!
+      console.log(music.desc());
+
+      // function Music(title1, author1) {
+      //   this.title1 = title1;
+      //   this.author1 = author1;
+
+      //   this.desc = function () {
+      //     return `${author1}의 곡 ${title1} 발표!`;
+      //   };
+      // }
+      // const music = new Music("Perfect Night", "르세라핌");
+      // console.log(music.desc()); // 르세라핌의 곡 'Perfect Night' 발표!
     </script>
 
     <!-- Q5. 프로토타입을 이용하여 발매일(date)를 추가하여 해당 실행 결과와 같이 나오도록 구현하세요 -->
@@ -79,6 +122,35 @@
       console.log("Q5-------------------------");
       Music.prototype.date = "2023.10.27";
       console.log(music.date); // 2023.10.27
+    </script>
+    <!-- 구조 분해 할당 -> 객체 -->
+    <script>
+      const { title, author, publisher, price } = book;
+      console.log(title);
+      console.log(author);
+      console.log(publisher);
+      console.log(price);
+    </script>
+
+    <!-- keywords pararmeter -->
+    <script>
+      //얘는 구조 분해 할당을 매개변수에서 바로 사용!
+      //객체에서 사용하는 구조 분해 할당 (요거는 편리)
+      function read({ title, author, publisher, price }) {
+        //console.log(data);
+        return `${title}을 읽는다`;
+      }
+      console.log(read(book));
+
+      //여기부터 keywords parameter
+      function write({
+        author = "테스트" /*깜박하면 테스트가 들어감*/,
+        title,
+      }) {
+        return `${author}가 ${title}을 쓰다`;
+      }
+      console.log(write({ author: "ddwwddw", title: "오늘 오후에 오심" }));
+      //write는 소괗로 중괗로 다 해야함
     </script>
   </body>
 </html>
