--- a/3_JavaScript/Object/실습문제3-2-4해설.html
+++ b/3_JavaScript/Object/실습문제3-2-4해설.html
@@ -160,13 +160,13 @@
           userPwdCheck.focus();
           return false;
         } else if (!userNameCheck()) {
-          userNameCheck.focus();
+          userName.focus();
           return false;
         } else if (!emailCheck()) {
-          emailCheck.focus();
+          email.focus();
           return false;
         }
-        return true; //전송보낼거임
+        return true; // 전송 보내겠다!
       }
     </script>
   </body>
