--- a/3_JavaScript/Object/실습문제3-2-3.html
+++ b/3_JavaScript/Object/실습문제3-2-3.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="css/실습문제3-2-3.css" />
   </head>
   <body>
-    <h1>그림맞추기 게임</h1>
+    <h1>그림 맞추기 게임</h1>
     <p>
-      버튼을 클릭하면, 그림이 출력됩니다. 모두 같은 그림이 나오면 승리합니다.
+      버튼을 클릭하면, 그림이 출력 됩니다. 모두 같은 그림이 나오면 승리합니다.
     </p>
     <div class="images">
       <img src="../../resources/spy1.jpg" alt="" />
       <img src="../../resources/spy2.jpg" alt="" />
       <img src="../../resources/spy3.jpg" alt="" />
     </div>
-    <button id="click">Click<span></span></button>
-    <button id="restart">Restart</button>
+    <div class="buttons">
+      <button id="click">Click <span></span></button>
+      <button id="restart">Restart</button>
+    </div>
     <p id="result"></p>
     <script src="js/실습문제3-2-3.js"></script>
   </body>
